# ble_switch

./: .gitignore  CMakeLists.txt  README.md  design.md  prj.conf
boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay
include/: config.h  types.h
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: app_state.rs  ffi.rs  lib.rs  motor.rs  power.rs  state_machine.rs  storage.rs  ui.rs
scripts/: build.sh  env.sh  setup_zephyr.sh
src/: app_logic.c  ble_svc.c  ble_svc.h  button.c  hw_glue.c  hw_glue.h  main.c  timer_glue.c  timer_glue.h
src/UI/: button.c  button.h  led.c  led.h
src/ble/: ble_handlers.c  ble_service.c  ble_service.h
src/motor/: motor_driver.c  motor_driver.h  motor_fsm.c
src/power/: battery.c  battery.h  sleep.c
src/storage/: nvs_storage.c  nvs_storage.h
